--- a/sass/js-timer.scss
+++ b/sass/js-timer.scss
@@ -9,13 +9,13 @@ body {
 }
 
 .js-timer {
-    /*width: 50%;*/
     height: 50%;
     margin: 25% auto;
     text-align: center;
 
     #display {
-        font-size: 4em;
+        font-size: 6em;
+        margin-bottom: 20px;
     }
 
 }
