--- a/sass/js-timer.scss
+++ b/sass/js-timer.scss
@@ -8,6 +8,10 @@ body {
     line-height: 1.2;
 }
 
+.shortcut {
+    text-decoration: underline;
+}
+
 .js-timer {
     height: 50%;
     margin: 25% auto;
